fixed issue where background is pixelated on mobile - removed fixed backgrounds for mobile

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,7 +99,7 @@ border-radius: 1rem;
 
 @media screen and (max-width: 768px) {
     .custom-figure {
-        background-size: auto 100%;
+        background-attachment: initial;
     }
 }
 
